# pysmooth7zip

./: .clang-format  .copier-answers.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .renovaterc.json  CMakeLists.txt  LICENSE  README.md  noxfile.py  pyproject.toml  vcpkg.json
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml  semantic-release.yml
cmake/vcpkg/: vcpkg.toolchain.cmake
docs/: conf.py  index.md
docs/api/: index.md  pysmooth7zip.rst
src/_core/: CMakeLists.txt
src/_core/include/: _core.hpp
src/_core/src/: pybind.cpp
src/_core/tests/: CMakeLists.txt  test_core.cpp  utils.hpp
src/pysmooth7zip/: __init__.py  _core.pyi
tests/: test_compiled.py  test_package.py
